# SetupOptimization

./: .gitignore  100_steps.pth  150_steps.pth  300.pth  50_steps.pth  550.pth  75_steps.pth  LICENSE  README.md  Untitled.ipynb  a.txt  aco_training_log_1764237386.csv  ants.py  ants_env.py  basic_methods.ipynb  bello.py  fresh_point.pth  ft_06_training_logs.csv  gnn.py  hello.py  load_controller.py  main.py  mlp.py  mlp_trainer.py  parameter_controller_checkpoint.pth  parameter_controller_step25.pth  pyproject.toml  sh.txt  shit.txt  utils.py
