[project]
name = "setupoptimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "python-tsp>=0.5.0",
    "scipy>=1.16.2",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
